--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "onDidSaveTextDocument"
   ],
   "main": "./extension.js",
+  "icon": "assets/ai.png",
   "contributes": {
     "commands": [
       {
